# cw-template

./: .env  Cargo.toml  Dockerfile  NOTICE  config.yml  go.mod  go.sum  index.html  package-lock.json  package.json  readme.md
.github/workflows/: Basic.yml
app/: app.go  export.go  ref_app.md  simulation_test.go  wasm_config.go
artifacts/: checksums.txt  checksums_intermediate.txt  mlm_contract.wasm  test_contract.wasm  token_contract.wasm
cmd/calibchaind/: main.go
cmd/mlm-chaind/: genwasm.go  main.go
cmd/mlmserviced/: main.go
config/: webpack.config.js
contracts/cw20/: Cargo.toml
contracts/mlm-contract/: Cargo.toml
contracts/token-contract/: Cargo.toml
contracts/token-contract/artifacts/: checksums.txt  checksums_intermediate.txt  token_contract.wasm
contracts/token-contract/examples/: schema.rs
contracts/token-contract/src/: allowances.rs  contract.rs  msg.rs
docs/static/: openapi.yml
examples/: schema.rs
proto/mlmchain/: genesis.proto  params.proto  query.proto  tx.proto  whois.proto
proto/mlmservice/: genesis.proto  params.proto  query.proto  tx.proto  user_detail.proto
public/: index.html
src/: AddReferral.js  App.css  App.js  contract.rs  error.rs  helpers.rs  index.css  main.js  msg.rs  state.rs
src/utils/: constants.js  helper.js
testutil/keeper/: mlmchain.go  mlmservice.go
testutil/network/: network.go
testutil/simapp/: simapp.go
vue/: package-lock.json
x/mlmchain/: abci.go  genesis.go  genesis_test.go  handler.go  module.go  module_simulation.go
x/mlmservice/: genesis.go  genesis_test.go  handler.go  module.go  (+1 more)
(+92 files in other folders)
